Revert "Fix tmux text selection delay"
This reverts commit e294d80c31ca3250d306d608612d289a52facc20.

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,10 +1,7 @@
 set -g default-terminal "screen-256color"
 set -g prefix C-a
 
-# Faster escape time (default 500ms causes delays)
-set -sg escape-time 0
-
-set -g mouse on
+set -g mouse off
 
 setw -g mode-keys vi
 bind-key h select-pane -L
