Revert "Enable tmux mouse mode and fix touchpad selection"
This reverts commit d5f4ebc3aff58d55c94d19faba6a2a0e5177a79e.

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,10 +1,7 @@
 set -g default-terminal "screen-256color"
 set -g prefix C-a
 
-set -g mouse on
-
-# Mouse: scroll to enter copy mode, drag to select, release copies to tmux buffer
-# Use prefix + ] to paste from tmux buffer
+set -g mouse off
 
 setw -g mode-keys vi
 bind-key h select-pane -L
